--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,7 @@ figure {
           font-size: 18px;
           line-height: 1.5;
           margin-bottom: 30px;
+          color:white;
           font-weight: 300;
           font-family: "Quicksand", Arial, sans-serif;
 
@@ -337,8 +338,8 @@ figure {
           font-weight: 400;
               color: white; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
-            color: #000;
-            border: 1px solid #000;
+            color: white;
+            border: 1px solid white;
             background: transparent !important; }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
               background: transparent !important;
@@ -440,18 +441,20 @@ body.offcanvas {
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-weight: 500; }
+  font-weight: 500;
+  color: white }
 
 .hire {
   padding: 2em;
   background: #f9bf3f; }
   .hire h2 {
-    line-height: 1.5; }
+    line-height: 1.5; 
+ }
   .hire .btn-hire {
-    color: #000;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 1px;
-    bordeR: 1px solid #000;
+    border: 1px solid #000;
     padding: 2px 10px; }
 
 .fancy-collapse-panel .panel-default > .panel-heading {
